# IDID

./: .gitignore  CMakeLists.txt  IDID.cpp  Makefile  README.md  bilinearScale.cpp  bilinearScaleM.cpp  imagesList.txt  res2x.txt  res4x.txt
include/: IDID.hpp  interpolations.hpp
src/: IDID.cpp  interpolations.cpp  main.cpp
